ResourceMark not declared in shenandoahRootProcessor.inline.hpp with --disable-precompiled-headers

XMLWordPrintable

    • gc
    • b22

      This can be triggered with --disable-precompiled-headers and --with-jvm-features=-jfr:

      ...
      /home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahRootProcessor.inline.hpp: In member function 'void ShenandoahRootScanner<ITR>::roots_do(uint, OopClosure*, CLDClosure*, CodeBlobClosure*, ThreadClosure*)':
      /home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahRootProcessor.inline.hpp:96:3: error: 'ResourceMark' was not declared in this scope
         ResourceMark rm;
         ^
      /home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahRootProcessor.inline.hpp:96:16: error: expected ';' before 'rm'
         ResourceMark rm;
                      ^
      /home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahRootProcessor.inline.hpp: In member function 'void ShenandoahRootScanner<ITR>::strong_roots_do(uint, OopClosure*, CLDClosure*, CodeBlobClosure*, ThreadClosure*)':
      /home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahRootProcessor.inline.hpp:114:3: error: 'ResourceMark' was not declared in this scope
         ResourceMark rm;
      ...

            Assignee:
            Qi Ao
            Reporter:
            Qi Ao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: