8224579: ResourceMark not declared in shenandoahRootProcessor.inline.hpp with --disable-precompiled-headers

Reviewed-by: shade